# tally

./: .gitignore  .golangci.yaml  .goreleaser.yml  .lefthook.yml  .rumdl.toml  .typos.toml  .yamlfmt  AGENTS.md  CLAUDE.md  Makefile  PLAN.md  README.md  RULES.md  codecov.yml  go.mod  go.sum  main.go  renovate.json
.claude/: settings.json
.github/workflows/: benchmarks.yml  ci.yaml  ci.yml  codeql.yml  release.yml  sync-buildkit-rules.yml  sync-hadolint-rules.yml  vscode-smoke.yml
.pmd/: cpd-config.xml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  project_overview.md  project_structure.md  suggested_commands.md  tally_buildkit_violation_pattern.md  task_completion_checklist.md
_tools/: go.mod  go.sum
_tools/customlint/: rulestruct.go  rulestruct_test.go
design-docs/: 11-vscode-extension-architecture.md  12-json-v2-migration.md  13-ai-autofix-acp.md  15-async-checks.md  16-integration-tests-refactor-and-placement.md  README.md
docs/: DX_IMPROVEMENTS.md  IMPLEMENTATION-ROADMAP.md  index.md
docs/guide/: ai-autofix-acp.md  auto-fix.md  ci-cd.md  configuration.md  index.md  installation.md  output-formats.md  quick-start.md
extensions/vscode-tally/: .vscodeignore  README.md  package.json  tsconfig.json
internal/async/: resolver.go  runtime.go  runtime_test.go  types.go
packaging/: pack.rb
packaging/pypi/: LICENSE  README.md  hatch_build.py  pyproject.toml
packaging/pypi/tally_cli/: __init__.py  main.py
scripts/: extract-hadolint-rules.sh  generate-hadolint-table.sh  validate-buildkit-rules.sh  validate-hadolint-status.sh
(+414 files in other folders)
