[project]
name = "tally-cli"
version = "0.1.0"
description = "A fast, configurable linter for Dockerfiles and Containerfiles"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Konstantin Vyatkin", email = "tino@vtkn.io" }]
requires-python = ">=3.9"
classifiers = [
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Quality Assurance",
  "Environment :: Console",
  "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/tinovyatkin/tally"

[project.scripts]
tally = "tally_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tally_cli"]
artifacts = ["tally_cli/bin/**/*"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = ["tally_cli/"]
